# pact-lang

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/spec/: PACT_Examples_Backend.pact  PACT_SPEC_v0.1.md
docs/superpowers/plans/: 2026-04-02-pact-interpreter-v01.md  2026-04-02-pact-lexer.md  2026-04-02-pact-parser-v01.md  2026-04-02-pact-routes-v03a.md  2026-04-03-sqlite-backend.md  2026-04-14-pact-showcase-api.md
docs/superpowers/specs/: 2026-04-02-pact-http-v03b-design.md  2026-04-02-pact-interpreter-v01-design.md  2026-04-02-pact-lexer-design.md  2026-04-02-pact-parser-v01-design.md  2026-04-04-pact-docs-design.md  (+5 more)
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
examples/: api.pact  chat.pact  checker_demo.pact  generics_demo.pact  generics_let_demo.pact  http_test.pact  links.pact  shortener.pact  showcase.pact  todo.pact
examples/demo/: main.pact  tests.pact
examples/modular/: main.pact
scripts/: install.sh
src/: checker.rs  docs.rs  formatter.rs  lib.rs  lsp.rs  main.rs  mcp.rs
src/docs/: app.md  db.md  effects.md  error.md  fn.md  http.md  list.md  match.md  modules.md  pipeline.md  quickstart.md  route.md  schedule.md  stream.md  string.md  test.md  type.md
src/interpreter/: builtins.rs  db.rs  environment.rs  errors.rs  interpreter.rs  json.rs  mod.rs  pipeline.rs  server.rs  value.rs
src/lexer/: errors.rs  lexer.rs  mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  errors.rs  mod.rs  parser.rs
(+6 files in other folders)
