[package]
name = "pact"
version = "0.5.0"
edition = "2024"
description = "The PACT programming language — compiler and interpreter"
license = "MIT"
repository = "https://github.com/KikotVit/pact-lang"
keywords = ["language", "compiler", "interpreter"]
rust-version = "1.85"

[dependencies]
tiny_http = "0.12"
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = "3"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
